HUD message tweaks, fix and content. - decreased HUD message text size so 5 lines fit - section color now properly preserved across line breaks in CanvasText - when the mission is won or failed, a HUD message is shown instead of the infoBox (#291) - improved / added tutorial HUD messages (in English) to the basic target practice mission (#282) - proper CSS cursor setting for sliders

--- a/css/general.css
+++ b/css/general.css
@@ -432,6 +432,12 @@ input[type=range] {
     width: 100%; /* Specific width is required for Firefox. */
     background: transparent; /* Otherwise white in Chrome */
     height: 30px;
+    
+    cursor: url(../images/cursor.png) 6 6, pointer;
+}
+
+input[type=range]:hover {
+    cursor: url(../images/cursor-light.png) 6 6, pointer;
 }
 
 input[type=range]:focus {
